another try to fix hamburger menu on mobile (problem only happens on live site when I check it on my phone)

--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -23,6 +23,9 @@ h1{
 header{
     background-color: variables.$mainColour;
     height: 80vh;
+    nav{
+        margin-top: 50px;
+    }
 }
 ul{
     display: flex;
@@ -34,7 +37,6 @@ ul{
 
  .open-menu{
         font-size: 2rem;
-        margin: 20px;
         display: none;
         cursor: pointer;
     }
