--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -33,7 +33,7 @@
     .open-menu{
         display: block;
         margin: 0;
-        padding-top: 50px;
+        padding-top: 20px;
     }
     .nav-items{
         a:hover{
